Update generative AI concepts and latest trends

--- a/노트/251231특강내용정리.md
+++ b/노트/251231특강내용정리.md
@@ -135,4 +135,109 @@
 
 ---
 
-## 11. Claude
+## 11. Claude Desktop & MCP
+
+### Claude Desktop
+- 로컬 파일 접근
+- 컴퓨터 제어
+- 멀티모달 처리
+- 개인정보 보호 강화
+
+### MCP (Model Context Protocol)
+- 외부 도구 연동
+- 파일 시스템 접근
+- 워크플로우 자동화
+
+---
+
+## 12. Claude Code
+- 코드베이스 분석
+- 자연어 → 코드 작성/수정
+- Git, VSCode, CI 연동
+
+---
+
+## 13. Gemini & CLI
+- 텍스트·이미지·오디오 멀티모달
+- 고급 추론
+- 터미널 기반 AI 에이전트
+
+---
+
+## 14. 국내 생성형 AI
+
+### 네이버 HyperCLOVA X
+- 한국어 데이터 6,500배 학습
+- 한국어 맥락 최적화
+
+### 카카오 Kanana
+- 한국어 특화 LLM
+- 오픈소스 기반
+
+### LG EXAONE
+- 고난도 추론
+- 전문직 업무 보조 가능
+
+---
+
+## 15. 생성형 AI 생태계 구조
+
+### 🔹 기반 모델 계층
+- LLM
+- 멀티모달 모델
+- 사전학습 모델
+
+### 🔹 플랫폼 계층
+- 클라우드 AI
+- SDK / API
+- MCP 서버
+
+---
+
+## 16. 핵심 연구 주제
+- 프롬프트 엔지니어링
+- RLHF
+- RAG
+- 모델 경량화
+- 멀티모달 학습
+- AI Alignment
+
+---
+
+## 17. 윤리적 이슈
+- 딥페이크
+- 데이터 편향
+- 저작권 문제
+- 개인정보 보호
+
+---
+
+## 18. 미래 전망
+- 사회 전반 혁신 가속
+- 산업 자동화 확대
+- 개인 창작 능력 극대화
+
+> 💡 **귀찮아하지 말 것.  
+> 지금 배우는 게 나중에 엄청난 무기가 됨.**
+
+---
+
+## 19. 학습 & 실습 리소스
+
+### 📚 튜토리얼
+- deeplearning.ai
+- Coursera
+- fast.ai
+- KOCW
+
+### 🔬 연구 플랫폼
+- Hugging Face
+- Papers With Code
+- NAVER AI Lab
+
+---
+
+## 20. 생성형 AI 실습 방법
+- 텍스트 : ChatGPT / Claude
+- 이미지 : Midjourney / DALL·E 3
+- 코딩 : GitHub Copilot
